--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignoring .yml files
+/config/database.yml
+/config/application.yml
+/config/secrets.yml
+/config/cable.yml
