--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@
 /config/master.key
 
 # Ignoring .yml files
-/config/database.yml
+config/database.yml
 /config/application.yml
 /config/secrets.yml
 /config/cable.yml
@@ -44,3 +44,4 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
