--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,33 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  adapter: postgresql
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } || 5%>
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  host: <%= Figaro.env.db_host %>
+  port: <%= Figaro.env.db_port %>
+  username: <%= Figaro.env.db_user %>
+  password: <%= Figaro.env.db_psw %>
+  database: <%= Figaro.env.db_name %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  host: <%= Figaro.env.db_host %>
+  port: <%= Figaro.env.db_port %>
+  username: <%= Figaro.env.db_user %>
+  password: <%= Figaro.env.db_psw %>
+  database: <%= Figaro.env.db_name %>
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  host: <%= Figaro.env.db_host %>
+  port: <%= Figaro.env.db_port %>
+  username: <%= Figaro.env.db_user %>
+  password: <%= Figaro.env.db_psw %>
+  database: <%= Figaro.env.db_name %>
