--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,7 @@
 /config/master.key
 
 # Ignoring .yml files
-config/application.yml
-config/secrets.yml
-config/cable.yml
+config/*.yml
 bin/*
 
 /public/packs
