Removing cable file from working tree
No ramo v1.dev
Mudanças a serem submetidas:
	modified:   .gitignore
	deleted:    config/cable.yml

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,9 @@
 /config/master.key
 
 # Ignoring .yml files
-config/*.yml
+#config/*.yml
+config/application.yml
+config/database.yml
 bin/*
 
 /public/packs
