--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,7 @@
 /config/master.key
 
 # Ignoring .yml files
-#config/*.yml
-config/application.yml
-config/database.yml
+config/*.yml
 bin/*
 
 /public/packs
