--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,10 @@
 /config/master.key
 
 # Ignoring .yml files
-config/*.yml
+config/database.yml
+config/application.yml
+config/secrets.yml
+config/credentials.yml*
 bin/*
 
 /public/packs
