--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@rails/webpacker": "5.4.0",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^5.1.0",
+    "glob-parent": "^5.1.2",
+    "node-forge": "^1.3.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
