--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.0",
     "glob-parent": "^6.0.2",
     "node-forge": "^1.3.1",
+    "nth-check": "2.0.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
