--- a/package.json
+++ b/package.json
@@ -2,23 +2,38 @@
   "name": "slick",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@popperjs/core": "^2.9.3",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.4.0",
     "alertifyjs": "^1.13.1",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.0",
+    "css-loader": "^6.7.1",
     "glob-parent": "^6.0.2",
+    "mini-css-extract-plugin": "^2.6.1",
     "node-forge": "^1.3.1",
     "nth-check": "2.0.1",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.1.0",
     "turbolinks": "^5.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-remove-empty-scripts": "^1.0.1"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
   },
   "version": "0.1.0",
-  "devDependencies": {
-    "webpack-dev-server": "^3.11.2"
+  "devDependencies": {},
+  "scripts": {
+    "build": "webpack --config ./config/webpack/webpack.config.js"
   }
 }
